Solving the problem with plug-ins connection + changing test units for the сlass StadioumManager